Add new tutor(include create blog, metting modal) and register html page

--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -22,6 +22,9 @@
 </head>
 
 <body>
+        <!-- content-wrapper ends -->
+
+
   <div class="container-scroller">
     <!-- partial:partials/_navbar.html -->
     <nav class="navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
@@ -326,134 +329,133 @@
           <div class="page-header">
             <h3 class="page-title"> Allocate student </h3>
           </div>
+          
           <div class="row">
-            <div class="col-12 grid-margin">
-              <div class="card">
-                <div class="card-body">
-
-                  <div class="row">
-                    <div class="col-12 col-sm-6 col-lg-5">
-                      <h4 class="card-title">Tutor list</h4>
-                      <div class="form-group">
-                        <div class="input-group">
-                          <input type="text" class="form-control" placeholder="Search tutor">
-                          <div class="input-group-append">
-                            <button class="btn btn-sm btn-gradient-primary" type="button">
-                              <i class="mdi mdi-account-search"></i>
-                            </button>
+              <div class="col-12 grid-margin">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="row">
+                      <div class="col-12 col-sm-4 col-lg-4">
+                        <h4 class="card-title">Tutor list</h4>
+                        <div class="form-group">
+                          <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Search tutor">
+                            <div class="input-group-append">
+                              <button class="btn btn-sm btn-gradient-primary" type="button">
+                                <i class="mdi mdi-account-search"></i>
+                              </button>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="list-wrapper">
+                          <div class="scroll-list">
+                            <ul class="d-flex flex-column-reverse todo-list-custom">
+                              <li>
+                                <div class="form-check">
+                                  <label class="form-check-label">
+                                    <input type="radio" class="form-check-input" name="optionsRadios" value=""> Tutor <i
+                                      class="input-helper"></i></label>
+                                </div>
+                              </li>
+                              <li>
+                                <div class="form-check">
+                                  <label class="form-check-label">
+                                    <input type="radio" class="form-check-input" name="optionsRadios" value=""> Tutor <i
+                                      class="input-helper"></i></label>
+                                </div>
+                              </li>
+                              <li>
+                                <div class="form-check">
+                                  <label class="form-check-label">
+                                    <input type="radio" class="form-check-input" name="optionsRadios" value=""> Tutor <i
+                                      class="input-helper"></i></label>
+                                </div>
+                              </li>
+                              <li>
+                                <div class="form-check">
+                                  <label class="form-check-label">
+                                    <input type="radio" class="form-check-input" name="optionsRadios" value=""> Tutor <i
+                                      class="input-helper"></i></label>
+                                </div>
+                              </li>
+                              <li>
+                                <div class="form-check">
+                                  <label class="form-check-label">
+                                    <input type="radio" class="form-check-input" name="optionsRadios" value=""> Tutor <i
+                                      class="input-helper"></i></label>
+                                </div>
+                              </li>
+  
+                            </ul>
                           </div>
                         </div>
                       </div>
-                      <div class="list-wrapper">
-                        <div class="scroll-list">
-                          <ul class="d-flex flex-column-reverse todo-list-custom">
-                            <li>
-                              <div class="form-check">
-                                <label class="form-check-label">
-                                  <input type="radio" class="form-check-input" name="optionsRadios" value=""> Tutor <i
-                                    class="input-helper"></i></label>
-                              </div>
-                            </li>
-                            <li>
-                              <div class="form-check">
-                                <label class="form-check-label">
-                                  <input type="radio" class="form-check-input" name="optionsRadios" value=""> Tutor <i
-                                    class="input-helper"></i></label>
-                              </div>
-                            </li>
-                            <li>
-                              <div class="form-check">
-                                <label class="form-check-label">
-                                  <input type="radio" class="form-check-input" name="optionsRadios" value=""> Tutor <i
-                                    class="input-helper"></i></label>
-                              </div>
-                            </li>
-                            <li>
-                              <div class="form-check">
-                                <label class="form-check-label">
-                                  <input type="radio" class="form-check-input" name="optionsRadios" value=""> Tutor <i
-                                    class="input-helper"></i></label>
-                              </div>
-                            </li>
-                            <li>
-                              <div class="form-check">
-                                <label class="form-check-label">
-                                  <input type="radio" class="form-check-input" name="optionsRadios" value=""> Tutor <i
-                                    class="input-helper"></i></label>
-                              </div>
-                            </li>
-
-                          </ul>
+                      <div class="col-12 col-sm-4 col-lg-4">
+                        <h4 class="card-title">Student list</h4>
+                        <div class="form-group">
+                          <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Search student">
+                            <div class="input-group-append">
+                              <button class="btn btn-sm btn-gradient-primary" type="button">
+                                <i class="mdi mdi-account-search"></i>
+                              </button>
+                            </div>
+                          </div>
                         </div>
-                      </div>
-                    </div>
-                    <div class="col-12 col-sm-6 col-lg-5">
-                      <h4 class="card-title">Student list</h4>
-                      <div class="form-group">
-                        <div class="input-group">
-                          <input type="text" class="form-control" placeholder="Search student">
-                          <div class="input-group-append">
-                            <button class="btn btn-sm btn-gradient-primary" type="button">
-                              <i class="mdi mdi-account-search"></i>
-                            </button>
+                        <div class="list-wrapper">
+                          <div class="form-check point-form-check">
+                            <label class="form-check-label">
+                              <input type="checkbox" class="form-check-input"> Select all <i
+                                class="input-helper"></i></label>
+                          </div>
+                          <div class="scroll-list">
+                            <ul class="d-flex flex-column-reverse todo-list-custom">
+                              <li>
+                                <div class="form-check">
+                                  <label class="form-check-label">
+                                    <input class="checkbox" type="checkbox"> Student <i class="input-helper"></i></label>
+                                </div>
+                              </li>
+                              <li>
+                                <div class="form-check">
+                                  <label class="form-check-label">
+                                    <input class="checkbox" type="checkbox"> Student <i class="input-helper"></i></label>
+                                </div>
+                              </li>
+                              <li>
+                                <div class="form-check">
+                                  <label class="form-check-label">
+                                    <input class="checkbox" type="checkbox"> Student <i class="input-helper"></i></label>
+                                </div>
+                              </li>
+                              <li>
+                                <div class="form-check">
+                                  <label class="form-check-label">
+                                    <input class="checkbox" type="checkbox"> Student <i class="input-helper"></i></label>
+                                </div>
+                              </li>
+                              <li>
+                                <div class="form-check">
+                                  <label class="form-check-label">
+                                    <input class="checkbox" type="checkbox"> Student <i class="input-helper"></i></label>
+                                </div>
+                              </li>
+                            </ul>
                           </div>
                         </div>
                       </div>
-                      <div class="list-wrapper">
-                        <div class="form-check point-form-check">
-                          <label class="form-check-label">
-                            <input type="checkbox" class="form-check-input"> Select all <i
-                              class="input-helper"></i></label>
+                      <div class="col-12 col-sm-4 col-lg-4">
+                        <h4 class="card-title">&nbsp;</h4>
+                        <div class="add-items d-flex">
+                          <button class="add btn btn-gradient-primary font-weight-bold todo-list-add-btn btn-block" data-toggle="modal" data-target="#allocateModal"> 
+                            <i class="mdi mdi-account-check"></i>Allocate</button>
                         </div>
-                        <div class="scroll-list">
-                          <ul class="d-flex flex-column-reverse todo-list-custom">
-                            <li>
-                              <div class="form-check">
-                                <label class="form-check-label">
-                                  <input class="checkbox" type="checkbox"> Student <i class="input-helper"></i></label>
-                              </div>
-                            </li>
-                            <li>
-                              <div class="form-check">
-                                <label class="form-check-label">
-                                  <input class="checkbox" type="checkbox"> Student <i class="input-helper"></i></label>
-                              </div>
-                            </li>
-                            <li>
-                              <div class="form-check">
-                                <label class="form-check-label">
-                                  <input class="checkbox" type="checkbox"> Student <i class="input-helper"></i></label>
-                              </div>
-                            </li>
-                            <li>
-                              <div class="form-check">
-                                <label class="form-check-label">
-                                  <input class="checkbox" type="checkbox"> Student <i class="input-helper"></i></label>
-                              </div>
-                            </li>
-                            <li>
-                              <div class="form-check">
-                                <label class="form-check-label">
-                                  <input class="checkbox" type="checkbox"> Student <i class="input-helper"></i></label>
-                              </div>
-                            </li>
-                          </ul>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-12 col-sm-12 col-lg-2">
-                      <h4 class="card-title">&nbsp;</h4>
-                      <div class="add-items d-flex">
-                        <button class="add btn btn-gradient-primary font-weight-bold todo-list-add-btn btn-block"> <i
-                            class="mdi mdi-account-check"></i> Allocate</button>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-
-          </div>
           <div class="row">
             <div class="col-12 grid-margin stretch-card lst-content">
               <div class="card">
@@ -526,7 +528,6 @@
               </div>
             </div>
           </div>
-
           <div class="row">
             <div class="col-12 grid-margin stretch-card lst-content">
               <div class="card">
@@ -795,6 +796,20 @@
       <!-- main-panel ends -->
     </div>
     <!-- page-body-wrapper ends -->
+  </div>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="allocateModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="alert alert-success" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            <h4 class="alert-heading">Well done!</h4>
+            <p>The email notification has sent to tutor and students.</p>
+            
+          </div>
+    </div>
   </div>
   <!-- container-scroller -->
   <!-- plugins:js -->
