--- a/src/assets/css/etutor.css
+++ b/src/assets/css/etutor.css
@@ -4,9 +4,15 @@
     position: relative;
 }
 
+.scroll-blog {
+    overflow-y: auto;
+    max-height: 785px;
+}
+
 .list-wrapper{
     position: relative;
     padding-top: 30px;
+    height: auto;
 }
 
 .point-form-check{
@@ -42,8 +48,119 @@
 }
 
 
-.lst-content .col-2{
+.lst-content .col-6{
     padding-top: 10px;
 }
 
 
+
+.clearfix::after,
+.calendar ol::after {
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+
+/* ================
+Calendar Styling */
+.calendar {
+  border-radius: 10px;
+}
+
+.month {
+  font-size: 1.5rem;
+}
+
+@media (min-width: 992px) {
+  .month {
+    font-size: 1.5rem;
+  }
+}
+
+.calendar ol li {
+  float: left;
+  width: 14.28571%;
+}
+
+.calendar .day-names {
+  border-bottom: 1px solid #eee;
+}
+
+.calendar .day-names li {
+  text-transform: uppercase;
+  margin-bottom: 0.5rem;
+}
+
+.calendar .days li {
+  border-bottom: 1px solid #eee;
+  min-height: 8rem;
+}
+
+.calendar .days li .date {
+  margin: 0.5rem 0;
+}
+
+.calendar .days li .event {
+  font-size: 0.75rem;
+  padding: 0.4rem;
+  color: white;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  border-radius: 4rem;
+  margin-bottom: 1px;
+}
+
+.calendar .days li .event.span-2 {
+  width: 200%;
+}
+
+.calendar .days li .event.begin {
+  border-radius: 1rem 0 0 1rem;
+}
+
+.calendar .days li .event.end {
+  border-radius: 0 1rem 1rem 0;
+}
+
+.calendar .days li .event.clear {
+  background: none;
+}
+
+.calendar .days li:nth-child(n+29) {
+  border-bottom: none;
+}
+
+.calendar .days li.outside .date {
+  color: #ddd;
+}
+
+.calendar .mdi-calendar-month{
+    font-size: 30px;
+}
+
+.modal-dialog-centered .alert{
+    margin: 0 auto;
+}
+
+.modal-dialog-centered .modal-content{
+    background-color: #fff !important;
+}
+
+.select-time .input-group{
+    width: 47%;
+    width: calc(50% - 0.5rem);
+}
+
+.small-ttl{
+    font-size: 0.875rem;
+    line-height: 1;
+    vertical-align: top;
+    margin-bottom: .5rem;
+}
+
+.modal-footer{
+    justify-content: flex-start;
+}
