Implement login UI

--- a/src/layouts/login.html
+++ b/src/layouts/login.html
@@ -9,7 +9,7 @@
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="../assets/vendor/bootstrap/css/bootstrap.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="../assets/fonts/font-awesome-4.7.0/css/	">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="../assets/vendor/animate/animate.css">
 <!--===============================================================================================-->	
@@ -47,7 +47,7 @@
 						<span class="symbol-input100">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
 						</span>
-                    </div>
+					</div>
                     
 					<div class="wrap-input100 validate-input" data-validate = "Password is required">
 						<input class="input100" type="password" name="pass" placeholder="Password">
