--- a/src/assets/css/etutor.css
+++ b/src/assets/css/etutor.css
@@ -1,61 +1,57 @@
 .scroll-list {
-    overflow-y: auto;
-    max-height: 300px;
-    position: relative;
+  overflow-y: auto;
+  max-height: 300px;
+  position: relative;
 }
 
 .scroll-blog {
-    overflow-y: auto;
-    max-height: 785px;
+  overflow-y: auto;
+  max-height: 785px;
 }
 
-.list-wrapper{
-    position: relative;
-    padding-top: 30px;
-    height: auto;
+.list-wrapper {
+  position: relative;
+  padding-top: 30px;
+  height: auto;
 }
 
-.point-form-check{
-    position: absolute;
-    top: -15px;
-    left: 0;
+.point-form-check {
+  position: absolute;
+  top: -15px;
+  left: 0;
 }
 
-.lst-content .part-right{
-    position: absolute;
-    top: 40px;
-    right: 42px;
+.lst-content .part-right {
+  position: absolute;
+  top: 40px;
+  right: 42px;
 }
 
-.lst-content .viw-all{
-    margin-left: 30px;
-    display: inline-block;
+.lst-content .viw-all {
+  margin-left: 30px;
+  display: inline-block;
 }
 
-.lst-content .filter{
-    cursor: pointer;
-    display: inline-block;
-    margin-right: 30px;
+.lst-content .filter {
+  cursor: pointer;
+  display: inline-block;
+  margin-right: 30px;
 }
 
-.lst-content a{
-    color:#343a40;
+.lst-content a {
+  color: #343a40;
 }
 
-.lst-content h6{
-    margin-top: 10px;
-    margin-bottom: 5px;
+.lst-content h6 {
+  margin-top: 10px;
+  margin-bottom: 5px;
 }
 
-
-.lst-content .col-6{
-    padding-top: 10px;
+.lst-content .col-6 {
+  padding-top: 10px;
 }
 
-
-
-.clearfix::after,
-.calendar ol::after {
+.clearfix::after, .calendar ol::after {
   content: ".";
   display: block;
   height: 0;
@@ -65,6 +61,7 @@
 
 /* ================
 Calendar Styling */
+
 .calendar {
   border-radius: 10px;
 }
@@ -137,30 +134,399 @@ Calendar Styling */
   color: #ddd;
 }
 
-.calendar .mdi-calendar-month{
-    font-size: 30px;
+.calendar .mdi-calendar-month {
+  font-size: 30px;
 }
 
-.modal-dialog-centered .alert{
-    margin: 0 auto;
+.modal-dialog-centered .alert {
+  margin: 0 auto;
 }
 
-.modal-dialog-centered .modal-content{
-    background-color: #fff !important;
+.modal-dialog-centered .modal-content {
+  background-color: #fff !important;
 }
 
-.select-time .input-group{
-    width: 47%;
-    width: calc(50% - 0.5rem);
+.select-time .input-group {
+  width: 47%;
+  width: calc(50% - 0.5rem);
 }
 
-.small-ttl{
-    font-size: 0.875rem;
-    line-height: 1;
-    vertical-align: top;
-    margin-bottom: .5rem;
+.small-ttl {
+  font-size: 0.875rem;
+  line-height: 1;
+  vertical-align: top;
+  margin-bottom: .5rem;
 }
 
-.modal-footer{
-    justify-content: flex-start;
+.modal-footer {
+  justify-content: flex-start;
+}
+
+.mdl-log {
+  align-items: flex-end;
+}
+
+.mdl-log p {
+  padding-bottom: 1.5em;
+  border-bottom: 1px solid #ebedf2;
+}
+
+.mdl-log .txt-time {
+  float: right;
+  color: #9c9fa6;
+}
+
+.dropdown-item:hover .preview-subject {
+  color: #000;
+}
+
+.list-group .nav-link .nav-profile-img {
+  position: relative;
+  width: 32px;
+  height: 32px;
+}
+
+.list-group .nav-link .nav-profile-img img {
+  width: 32px;
+  height: 32px;
+  border-radius: 100%;
+}
+
+.list-group .nav-profile-img .availability-status.online {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  border-radius: 100%;
+  border: 2px solid #ffffff;
+  bottom: 5px;
+  right: -5px;
+  background: #1bcfb4;
+}
+
+.list-group .nav-link .nav-profile-text {
+  margin-left: 1.25rem;
+}
+
+.list-group .nav-link .nav-profile-text p {
+  line-height: 1;
+}
+
+.list-group .nav-link {
+  color: inherit;
+  font-size: 0.875rem;
+  margin-left: 0;
+  margin-right: 0;
+  height: 70px;
+  display: flex !important;
+  align-items: center;
+  border-top: 1px solid #ebedf2;
+}
+
+.list-group .nav-link:hover {
+  background-color: rgba(0, 0, 0, .05);
+}
+
+.chat-container {
+  display: none;
+}
+
+.openchatbox{
+  display: block;
+}
+
+.chat-container .chat {
+  position: fixed;
+  bottom: 35px;
+  right: 35px;
+  width: 340px;
+  z-index: 9;
+}
+
+.chat-container .chat {
+  margin-top: auto;
+  margin-bottom: auto;
+  background: linear-gradient(to right, #da8cff, #9a55ff);
+  -webkit-transition: opacity 0.3s ease;
+  transition: opacity 0.3s ease;
+  border-radius: 15px !important;
+}
+
+.chat-container .card {
+  height: 500px;
+  border-radius: 15px !important;
+  background-color: rgba(0, 0, 0, 0.4) !important;
+}
+
+.chat-container .contacts_body {
+  padding: 0 !important;
+  overflow-y: auto;
+  white-space: nowrap;
+  max-height: 420px;
+  margin-top: 10px;
+}
+
+.chat-container .msg_card_body {
+  overflow-y: auto;
+  padding: 1.5em 1.5em 0 1.5em;
+}
+
+.chat-container .card-header {
+  border-radius: 15px 15px 0 0 !important;
+  border-bottom: 0 !important;
+}
+
+.chat-container .card-header .input-group{
+  padding-right: 30px;
+}
+
+.chat-container .close{
+  position: absolute;
+  top: 23px;
+  right: 20px;
+  cursor: pointer;
+  z-index: 2;
+}
+
+.chat-container .card-footer {
+  border-radius: 0 0 15px 15px !important;
+  border-top: 0 !important;
+}
+
+.chat-container .container {
+  align-content: center;
+}
+
+.chat-container .search {
+  border-radius: 15px 0 0 15px !important;
+  background-color: rgba(0, 0, 0, 0.3) !important;
+  border: 0 !important;
+  color: white !important;
+}
+
+.chat-container .search:focus {
+  box-shadow: none !important;
+  outline: 0px !important;
+}
+
+.chat-container .type_msg {
+  background-color: rgba(0, 0, 0, 0.3) !important;
+  border: 0 !important;
+  color: white !important;
+  height: 60px !important;
+  overflow-y: auto;
+}
+
+.chat-container .type_msg:focus {
+  box-shadow: none !important;
+  outline: 0px !important;
+}
+
+.chat-container .attach_btn {
+  border-radius: 15px 0 0 15px !important;
+  background-color: rgba(0, 0, 0, 0.3) !important;
+  border: 0 !important;
+  color: white !important;
+  cursor: pointer;
+}
+
+.chat-container .send_btn {
+  border-radius: 0 15px 15px 0 !important;
+  background-color: rgba(0, 0, 0, 0.3) !important;
+  border: 0 !important;
+  color: white !important;
+  cursor: pointer;
+}
+
+.chat-container .search_btn {
+  border-radius: 0 15px 15px 0 !important;
+  background-color: rgba(0, 0, 0, 0.3) !important;
+  border: 0 !important;
+  color: white !important;
+  cursor: pointer;
+}
+
+.chat-container .contacts {
+  list-style: none;
+  padding: 0;
+}
+
+.chat-container .contacts li {
+  width: 100% !important;
+  padding: 5px 10px;
+  margin-bottom: 0px !important;
+  border-radius: 15px;
+}
+
+.chat-container .active {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.chat-container .user_img {
+  height: 40px;
+  width: 40px;
+  border: 1.5px solid #f5f6fa;
+}
+
+.chat-container .user_img_msg {
+  height: 40px;
+  width: 40px;
+  border: 1.5px solid #f5f6fa;
+}
+
+.chat-container .img_cont {
+  position: relative;
+  height: 40px;
+  width: 40px;
+}
+
+.chat-container .img_cont_msg {
+  height: 40px;
+  width: 40px;
+}
+
+.chat-container .bd-highlight{
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.chat-container .online_icon {
+  position: absolute;
+  height: 9px;
+  width: 9px;
+  background-color: #4cd137;
+  border-radius: 50%;
+  bottom: 0.1em;
+  right: 0.2em;
+  border: 1.5px solid white;
+}
+
+.chat-container .offline {
+  background-color: #c23616 !important;
+}
+
+.chat-container .user_info {
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 15px;
+}
+
+.chat-container .user_info p{
+  margin-bottom: 0;
+}
+
+.chat-container .user_info span {
+  font-size: 14px;
+  color: white;
+}
+
+.chat-container .user_info p {
+  font-size: 10px;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.chat-container .video_cam {
+  margin-left: 50px;
+  margin-top: 5px;
+}
+
+.chat-container .video_cam span {
+  color: white;
+  font-size: 20px;
+  cursor: pointer;
+  margin-right: 20px;
+}
+
+.chat-container .msg_cotainer {
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 10px;
+  border-radius: 25px;
+  background-color: #82ccdd;
+  padding: 10px;
+  position: relative;
+}
+
+.chat-container .msg_cotainer_send {
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-right: 10px;
+  border-radius: 25px;
+  background-color: #78e08f;
+  padding: 10px;
+  position: relative;
+}
+
+.chat-container .msg_time {
+  position: absolute;
+  left: 0;
+  bottom: -15px;
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 10px;
+}
+
+.chat-container .msg_time_send {
+  position: absolute;
+  right: 0;
+  bottom: -15px;
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 10px;
+}
+
+.chat-container .msg_head {
+  position: relative;
+}
+
+.chat-container #action_menu_btn {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  color: white;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+.chat-container .action_menu {
+  z-index: 1;
+  position: absolute;
+  padding: 15px 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border-radius: 15px;
+  top: 30px;
+  right: 15px;
+  display: none;
+}
+
+.chat-container .action_menu ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.chat-container .action_menu ul li {
+  width: 100%;
+  padding: 10px 15px;
+  margin-bottom: 5px;
+}
+
+.chat-container .action_menu ul li i {
+  padding-right: 10px;
+}
+
+.chat-container .action_menu ul li:hover {
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+@media(max-width: 576px) {
+  .chat-container .contacts_card {
+    margin-bottom: 15px !important;
+  }
+  .chat-container .chat {
+    
+    bottom: 0;
+    right: 0;
+    width: 320px;
+    
+  }
 }
