--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -63,7 +63,7 @@
                       </div>
                     </div>
                     <div class="preview-item-content d-flex align-items-start flex-column justify-content-center">
-                      <h6 class="preview-subject font-weight-normal mb-1">Event today</h6>
+                      <h6 class="preview-subject ellipsis font-weight-normal mb-1"> 1 Event today asdlf ajskld ;laksdjf; a;sldjf ;alsdjf ;alkdsjf ;laksdjf ;alsjd ;lajf;lalsk</h6>
                       <p class="text-gray ellipsis mb-0"> Just a reminder that you have an event today </p>
                     </div>
                   </a>
@@ -75,7 +75,7 @@
                       </div>
                     </div>
                     <div class="preview-item-content d-flex align-items-start flex-column justify-content-center">
-                      <h6 class="preview-subject font-weight-normal mb-1">Settings</h6>
+                      <h6 class="preview-subject  font-weight-normal mb-1">Settings</h6>
                       <p class="text-gray ellipsis mb-0"> Update dashboard </p>
                     </div>
                   </a>
